<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:background="@color/light_gray"
    tools:context=".presentation.register_screen.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLoginTitle"
            style="@style/Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFirstName"
            style="@style/Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/helper_top_margin_to_top_bar"
            android:text="@string/first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />

        <EditText
            android:id="@+id/etFirstName"
            style="@style/HelperMedium1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/edit_text_top_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:background="@drawable/white_rounded_background"
            android:hint="@string/first_name_helper"
            android:inputType="text"
            android:minHeight="@dimen/edit_text_min_height"
            android:paddingStart="@dimen/edit_text_start_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstName"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvSecondName"
            style="@style/Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/helper_tv_top_margin"
            android:text="@string/second_name"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

        <EditText
            android:id="@+id/etSecondName"
            style="@style/HelperMedium1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_top_margin"
            android:background="@drawable/white_rounded_background"
            android:hint="@string/second_name_helper"
            android:inputType="text"
            android:minHeight="@dimen/edit_text_min_height"
            android:paddingStart="@dimen/edit_text_start_padding"
            app:layout_constraintEnd_toEndOf="@+id/etFirstName"
            app:layout_constraintStart_toStartOf="@+id/etFirstName"
            app:layout_constraintTop_toBottomOf="@+id/tvSecondName"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvEmailTitle"
            style="@style/Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/helper_tv_top_margin"
            android:text="@string/e_mail"
            app:layout_constraintStart_toStartOf="@+id/tvSecondName"
            app:layout_constraintTop_toBottomOf="@+id/etSecondName" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/HelperMedium1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_top_margin"
            android:background="@drawable/white_rounded_background"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/edit_text_min_height"
            android:paddingStart="@dimen/edit_text_start_padding"
            app:layout_constraintEnd_toEndOf="@+id/etSecondName"
            app:layout_constraintStart_toStartOf="@+id/etSecondName"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailTitle"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvPassword"
            style="@style/Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/helper_tv_top_margin"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/tvEmailTitle"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/HelperMedium1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_top_margin"
            android:background="@drawable/white_rounded_background"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="@dimen/edit_text_min_height"
            android:paddingStart="@dimen/edit_text_start_padding"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tvRepeatPassword"
            style="@style/Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_top_margin"
            android:text="@string/repeat_password"
            app:layout_constraintStart_toStartOf="@+id/tvPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <EditText
            android:id="@+id/etRepeatPassword"
            style="@style/HelperMedium1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_top_margin"
            android:background="@drawable/white_rounded_background"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="@dimen/edit_text_min_height"
            android:paddingStart="@dimen/edit_text_start_padding"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvRepeatPassword"
            tools:ignore="TextContrastCheck" />

        <CheckBox
            android:id="@+id/cbAcceptTerms"
            style="@style/Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:minHeight="@dimen/edit_text_min_height"
            android:paddingStart="@dimen/edit_text_start_padding"
            android:text="@string/accept_terms"
            app:layout_constraintStart_toStartOf="@+id/etRepeatPassword"
            app:layout_constraintTop_toBottomOf="@+id/etRepeatPassword" />

        <TextView
            android:id="@+id/btnSignUp"
            style="@style/HeadlineBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_margin_top"
            android:background="@drawable/orange_rounded_background"
            android:gravity="center"
            android:minHeight="@dimen/edit_text_min_height"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="@+id/etRepeatPassword"
            app:layout_constraintStart_toStartOf="@+id/etRepeatPassword"
            app:layout_constraintTop_toBottomOf="@+id/cbAcceptTerms"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnToLogin"
            style="@style/ReportBugButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_to_login_top_margin"
            android:text="@string/already_have_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>